The body width bug fixed and navbar z-index increased to avoid overflow by buttons in body.

--- a/modules/look/client-react/ui-antd/styles/global.less
+++ b/modules/look/client-react/ui-antd/styles/global.less
@@ -117,7 +117,7 @@
 }
 
 .page-content {
-  width: 100vw;
+  width: 100%;
   padding: 69px 5px 10px 5px;
   min-height: 100vh;
 }
